# cdktf-local-build

./: .gitignore  .projenrc.js  .projenrc.ts  API.md  Dockerfile  README.md  package.json
.github/workflows/: build.yml  release.yml  upgrade-main.yml
.projen/: deps.json  tasks.json
src/: cargo.ts  docker.ts  index.ts  node.ts  npm.ts
test/: cargo.test.ts  docker.test.ts  helper.ts
test/cargo/testproject/: Cargo.toml
test/docker/testproject/: Dockerfile  index.js  package-lock.json  package.json
