[package]
name = "testproject"
version = "0.1.0"
authors = ["Daniel Schmidt <danielmschmidt92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
tokio = "1.9.0"